[package]
name = "tesseras"
version = "0.1.0"
edition = "2024"

#
# lints
#

[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
tail_expr_drop_order = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
unit-bindings = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }

#
# dep
#

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.10.6"

#
# bins
#

[[bin]]
name = "rendzvous"
path = "src/bin/rendzvous.rs"
doc = false
test = false

#
# profiles
#

[profile.dev]
debug = false

[profile.test]
debug = false

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.coverage]
inherits = "release"
opt-level = 2
codegen-units = 256
lto = "thin"
debug-assertions = true
overflow-checks = true

[profile.dev-no-debug-assertions]
inherits = "dev"
debug-assertions = false
